--- a/tt.ipynb
+++ b/tt.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df =  pd.read_csv('slagelse_data.csv')"
+    "df =  pd.read_csv('final_output.csv')"
    ]
   },
   {
@@ -44,9 +44,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CVR Nummer</th>\n",
-       "      <th>Navn</th>\n",
-       "      <th>Kommune Navn</th>\n",
+       "      <th>cvr_nummer</th>\n",
+       "      <th>navn</th>\n",
+       "      <th>kommune_navn</th>\n",
+       "      <th>antal_ansatte</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -55,42 +56,54 @@
        "      <td>15754176</td>\n",
        "      <td>Slagelse Erhvervsforening Team Slagelse</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>34232261</td>\n",
-       "      <td>Gravstenen.dk v/Thomas Worm Hansen</td>\n",
-       "      <td>SLAGELSE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>41447281</td>\n",
        "      <td>Grundejerforeningen Hyllerupvej</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>32331203</td>\n",
        "      <td>NETTOTELT ApS</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>26476208</td>\n",
        "      <td>Handelsby.dk                      v/Brian M. L...</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>34232261</td>\n",
+       "      <td>Gravstenen.dk v/Thomas Worm Hansen</td>\n",
+       "      <td>SLAGELSE</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CVR Nummer                                               Navn Kommune Navn\n",
-       "0    15754176            Slagelse Erhvervsforening Team Slagelse     SLAGELSE\n",
-       "1    34232261                 Gravstenen.dk v/Thomas Worm Hansen     SLAGELSE\n",
-       "2    41447281                    Grundejerforeningen Hyllerupvej     SLAGELSE\n",
-       "3    32331203                                      NETTOTELT ApS     SLAGELSE\n",
-       "4    26476208  Handelsby.dk                      v/Brian M. L...     SLAGELSE"
+       "   cvr_nummer                                               navn kommune_navn  \\\n",
+       "0    15754176            Slagelse Erhvervsforening Team Slagelse     SLAGELSE   \n",
+       "1    41447281                    Grundejerforeningen Hyllerupvej     SLAGELSE   \n",
+       "2    32331203                                      NETTOTELT ApS     SLAGELSE   \n",
+       "3    26476208  Handelsby.dk                      v/Brian M. L...     SLAGELSE   \n",
+       "4    34232261                 Gravstenen.dk v/Thomas Worm Hansen     SLAGELSE   \n",
+       "\n",
+       "   antal_ansatte  \n",
+       "0            2.0  \n",
+       "1            NaN  \n",
+       "2            1.0  \n",
+       "3            0.0  \n",
+       "4            0.0  "
       ]
      },
      "execution_count": 3,
@@ -104,7 +117,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3004"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df.duplicated()) - df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2 = pd.read_csv('final_2_output.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -128,70 +170,116 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CVR Nummer</th>\n",
-       "      <th>Navn</th>\n",
-       "      <th>Kommune Navn</th>\n",
+       "      <th>cvr_nummer</th>\n",
+       "      <th>navn</th>\n",
+       "      <th>kommune_navn</th>\n",
+       "      <th>antal_ansatte</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1006</th>\n",
-       "      <td>32857191</td>\n",
-       "      <td>Addina v/Michal Pentti Lorentsen</td>\n",
+       "      <th>0</th>\n",
+       "      <td>15754176</td>\n",
+       "      <td>Slagelse Erhvervsforening Team Slagelse</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1007</th>\n",
-       "      <td>34076316</td>\n",
-       "      <td>JOSK ApS</td>\n",
+       "      <th>1</th>\n",
+       "      <td>41447281</td>\n",
+       "      <td>Grundejerforeningen Hyllerupvej</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1008</th>\n",
-       "      <td>37280283</td>\n",
-       "      <td>Nifingers Gospel Magic &amp; Events</td>\n",
+       "      <th>2</th>\n",
+       "      <td>32331203</td>\n",
+       "      <td>NETTOTELT ApS</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1009</th>\n",
-       "      <td>34744483</td>\n",
-       "      <td>Ars Nova-koret</td>\n",
+       "      <th>3</th>\n",
+       "      <td>26476208</td>\n",
+       "      <td>Handelsby.dk                      v/Brian M. L...</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1010</th>\n",
-       "      <td>37511994</td>\n",
-       "      <td>Korsør Nor Inner Wheel</td>\n",
+       "      <th>4</th>\n",
+       "      <td>34232261</td>\n",
+       "      <td>Gravstenen.dk v/Thomas Worm Hansen</td>\n",
        "      <td>SLAGELSE</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CVR Nummer                              Navn Kommune Navn\n",
-       "1006    32857191  Addina v/Michal Pentti Lorentsen     SLAGELSE\n",
-       "1007    34076316                          JOSK ApS     SLAGELSE\n",
-       "1008    37280283   Nifingers Gospel Magic & Events     SLAGELSE\n",
-       "1009    34744483                    Ars Nova-koret     SLAGELSE\n",
-       "1010    37511994            Korsør Nor Inner Wheel     SLAGELSE"
+       "   cvr_nummer                                               navn kommune_navn  \\\n",
+       "0    15754176            Slagelse Erhvervsforening Team Slagelse     SLAGELSE   \n",
+       "1    41447281                    Grundejerforeningen Hyllerupvej     SLAGELSE   \n",
+       "2    32331203                                      NETTOTELT ApS     SLAGELSE   \n",
+       "3    26476208  Handelsby.dk                      v/Brian M. L...     SLAGELSE   \n",
+       "4    34232261                 Gravstenen.dk v/Thomas Worm Hansen     SLAGELSE   \n",
+       "\n",
+       "   antal_ansatte  \n",
+       "0            2.0  \n",
+       "1            NaN  \n",
+       "2            1.0  \n",
+       "3            0.0  \n",
+       "4            0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df.duplicated()]"
+    "df_2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(152000, 4)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3004"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df_2.duplicated()) - df_2.shape[0]"
+   ]
   }
  ],
  "metadata": {
